--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,22 @@
         </label>
         <input type="checkbox" class="checkbox" id="show-encrypted" />
       </div>
+      
+      <fieldset>
+        <legend>Choose encryption algorithm:</legend>
+
+        <div>
+          <input type="radio" class="checkbox" id="a51" name="algorithm" value="a51" checked/>
+          <label for="a51" class="btn-circle"> A5/1 </label>
+        </div>
+        
+        <div>
+          <input type="radio" class="checkbox" id="xtea" name="algorithm" value="xtea"/>
+          <label for="xtea" class="btn-circle"> XTEA </label>
+        </div>
+
+      </fieldset>
+
     </div>
 
     <script
