--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,10 @@
     <div class="chat-container">
       <div id="message-container"></div>
       <form id="message-form">
-        <input type="text" id="message-input" placeholder="Type a message..." />
+        <div class="form-input">
+          <input type="text" id="message-input" placeholder="Type a message..." />
+          <input type="file" id="file-input" />
+        </div>
         <button type="submit">Send</button>
       </form>
 
